:rocket: Imporve SEO

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
   <!-- <link rel="manifest" href="/site.webmanifest"> -->
+  <meta prefix="og: http://ogp.me/ns#" property="og:site_name" content="Amine Beji's Portfolio">
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Amine Beji's Portfolio" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Amine Beji's Portfolio" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image:url" content="%PUBLIC_URL%/Intro.png" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="300" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Amine Beji's Awesome Protfolio ." />
